controllers folder and swagger json updates
